added <img> element with src information

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <li class="testimonials"><a href="#testimonials">Testimonials</a></li>
     </ul>
   </nav>
+  <img src="https://images.unsplash.com/photo-1581783898377-1c85bf937427?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8aGFuZHltYW58ZW58MHx8MHx8fDA%3D">
     <h2 id="about">About</h2>
     <p>Angel has completed countless projects across a wide variety of trades for residents of Utah. A skilled craftsman and laborer, he brings years of knowledge and experience to help you with all of your home improvement, landscaping, construction needs and more! If you value a contractor that offers quality work at a fair price and is dependable, look no further.</p>
   <h2 id="services">Services</h2>
